@startuml
'https://plantuml.com/class-diagram
title PublicationType Aggregate DDD

'==== basic style ====
skinparam monochrome false
skinparam shadowing false
skinparam defaultFontName Futura
skinparam objectFontSize 20
skinparam backgroundColor CornSilk
skinparam objectBackgroundColor WhiteSmoke
skinparam noteBackgroundColor #FFFFE0
skinparam ArrowFontColor #3B4953
skinparam ActivationBackgroundColor black
skinparam classAttributeIconSize 0

top to bottom direction

package "PERSISTENCE" {

    package "MEM" {

        class MemoPublicationTypeRepo <<Repo>> {
        - publicationTypeExists(PublicationTypeId : PublicationTypeId) : boolean
        }

    }
}

package "DOMAIN" {

package "REPOSITORY" {

    interface IPublicationTypeRepo <<Interface>> {
    + addPublicationType(publicationTypeName : String) : PublicationType
    + getAll() : List<PublicationType>
    }

}

package "VALUE OBJECT" {

    class PublicationTypeId <<Value Object>> #LightPink {
    - _id : String
    +equals(object : Object) : boolean
    +toString() : String
    }

}

package "PUBLICATIONTYPE" #b0c4d4 {

    class PublicationType <<Root>> <<Entity>> {
      + identity() : PublicationTypeId
      + isSamePublicationType(publicationTypeId : PublicationTypeId) : boolean
    }

    class PublicationTypeFactory <<Factory>> {
    + createPublicationType(publicationTypeName : String) : PublicationType
    + createPublicationType(publicationTypeId : PublicationTypeId): PublicationType

    }

}

}


MemoPublicationTypeRepo ..|> IPublicationTypeRepo
MemoPublicationTypeRepo "1" --> "1" PublicationTypeFactory : invokes

MemoPublicationTypeRepo "1" --> "*" PublicationType : persists

PublicationType "1" --> "1" PublicationTypeId: has

PublicationTypeFactory "1" ..> "*" PublicationType: <<create>>

@enduml